fix: dark mode

--- a/components/features/ultimas-list/default.scss
+++ b/components/features/ultimas-list/default.scss
@@ -28,6 +28,10 @@
     padding: 0 16px;
     background-color: #f4f4f4;
     border-radius: 5px;
+
+    .dark & {
+      background-color: var(--contrast-primary-color);
+    }
   }
   &__item {
     padding: 16px 0;
@@ -40,11 +44,21 @@
       flex-direction: row;
     }
 
+    .c-link {
+      .dark & {
+        color: var(--contrast-sencodary-color);
+      }
+    }
+
     img {
       min-width: 100%;
       max-height: 206px;
       border-radius: 5px;
       object-fit: cover;
+
+      .dark & {
+        filter: grayscale(1);
+      }
 
       @media (min-width: 72rem) {
         min-width: 369px;
@@ -82,6 +96,10 @@
   &__btn-container {
     background-color: #f4f4f4;
     text-align: center;
+
+    .dark & {
+      background-color: var(--contrast-primary-color); 
+    }
   }
   &__btn {
     margin: 24px 0;
@@ -97,6 +115,11 @@
     cursor: pointer;
     height: 48px;
     width: max-content;
+
+    .dark & {
+      border: 1px solid var(--contrast-secondary-color);
+      background-color: var(--contrast-primary-color) !important;
+    }
 
     &:disabled {
       opacity: 0.7;
